--- a/gyro.css
+++ b/gyro.css
@@ -1,23 +1,37 @@
-#container {
+#viewport {
 	background-color: black;
 	width: 400px;
 	height:300px;
-	border: 1px solid gray;
+	/*border: 1px solid gray;*/
 	float: left;
 }
 
 #controls {
 	float: left;
-	border: 1px solid gray;
+	/*border: 1px solid gray;*/
 	width:  400px;
 	height: 300px;
 }
 
-#plot{
+#plot-container{
 	clear: both;
-	border: 1px solid gray;
+	/*border: 1px solid gray;*/
 	width: 800px;
 	height: 300px;
+}
+
+#plot-placeholder{
+	float:left;
+	width:640px;
+	height:300px;
+	border: 1px solid gray;
+}
+
+#plot-overview{
+	float:right;
+	width:150px;
+	height:125px;
+	border: 1px solid gray;
 }
 
 .knob{
@@ -60,6 +74,10 @@ h3{
 	text-align: center;
 }
 
+.dummy{
+	display:none;
+}
+
 a.button{
 	background: #ECECEC;
 	border-radius: 15px;
@@ -89,4 +107,11 @@ a.button:hover{
 a.button.on{
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
 	background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
+}
+
+.icon {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	fill: currentColor;
 }
