--- a/gyro.css
+++ b/gyro.css
@@ -1,6 +1,25 @@
+#info{
+	position: absolute;
+	top:60px;
+	left:150px;
+	width:500px;
+	z-index: 5000;
+}
+
+.result{
+	margin:5px;
+	width:790px;
+}
+
+.close-div{
+	height: 0px;
+	text-align: right;
+	/*margin-bottom: -100px;*/
+}
+
 #viewport {
 	background-color: black;
-	width: 400px;
+	width: 350px;
 	height:300px;
 	/*border: 1px solid gray;*/
 	float: left;
@@ -9,8 +28,9 @@
 #controls {
 	float: left;
 	/*border: 1px solid gray;*/
-	width:  400px;
+	width:  450px;
 	height: 300px;
+	padding-left: 1px;
 }
 
 #plot-container{
@@ -22,7 +42,7 @@
 
 #plot-placeholder{
 	float:left;
-	width:640px;
+	width:800px;
 	height:300px;
 	border: 1px solid gray;
 }
@@ -52,7 +72,7 @@
 	width: 65px;
 	margin-left: 0px;
 	padding-left: 3px;
-	height: 20px;
+	height: 24px;
 	font-size: 16px;
 }
 
@@ -62,12 +82,26 @@
 
 .column{
 	float:left;
-	width: 133px;
+	width: 149px;
 	position: relative;
+}
+
+.control-buttons{
+	margin-top: 10px;
+}
+
+#controls .alert-danger{
+	height: 35px;
+	padding-top: 6px;
+	margin-top: 10px;
 }
 
 .clear{
 	clear: both;
+}
+
+button.play{
+	width:125px;
 }
 
 h3{
@@ -78,40 +112,119 @@ h3{
 	display:none;
 }
 
-a.button{
-	background: #ECECEC;
-	border-radius: 15px;
-	padding: 10px 20px;
-	display: block;
-	text-align: center;
-	font-family: arial;
-	font-weight: bold;
-	color:#7f7f7f;
-	text-decoration: none;
-	text-shadow:0px 1px 0px #fff;
-	border:1px solid #a7a7a7;
-	width: 120px;
-	margin: 10px;
-	margin-top:10px;
-	cursor: pointer;
-	box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-	-webkit-transition:box-shadow 0.5s;
-}
-a.button i{
-	float: right;
-	margin-top: 2px;
-}
-a.button:hover{
-	box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-}
-a.button.on{
-	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
-	background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
-}
-
 .icon {
 	display: inline-block;
 	width: 1em;
 	height: 1em;
 	fill: currentColor;
+}
+
+/*! The MIT License (MIT)
+
+Copyright (c) 2014 Prince John Wesley <princejohnwesley@gmail.com>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+**/
+
+
+.jcs {
+    position: relative;
+    border-style: solid;
+    border-radius: 100%;
+    border-color: red; 
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    border-width: 5px;
+    cursor: pointer;
+}
+
+.jcs-value {
+    position: absolute;
+    border-style: none;
+    border-radius: 100%;
+    border: 0px solid rgb(236, 248, 212);
+    text-align : center;
+    pointer-events: none;
+    line-height: 4em;
+    color: white;
+    background-color: #AFD8F8;
+    outline: none;
+}
+
+.jcs-indicator {
+    
+    position: absolute;
+    border-radius: 100%;
+    background-color: deeppink;
+    border: 0px;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    pointer-events : none;
+}
+
+#precession .jcs{
+    border: 5px solid #EDC240;
+}
+
+#nutation .jcs{
+    border: 5px solid #AFD8F8;
+}
+
+#rotation .jcs{
+    border: 5px solid #4DA74D;
+}
+
+#precession .jcs-value, #precession .jcs-indicator {
+    background-color: #EDC240
+}
+
+#nutation .jcs-value, #nutation .jcs-indicator {
+    background-color: #AFD8F8
+}
+
+#rotation .jcs-value, #rotation .jcs-indicator {
+    background-color: #4DA74D
+}
+
+
+.jcs-panel {
+    position: relative;
+    display: inline-block;
+    border-style: solid;
+    border-color: transparent;
+    cursor: pointer;
+}
+
+
+.jcs-value img {
+    border-radius: 100%;
+    background: transparent;
+	width: inherit;
+	height: inherit;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
